finished views for stories 1 thru 4, all tests passing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,15 +23,41 @@
         <%= link_to "View Cart"%>
       </span>
       <span id="cart_items">Items in Cart: </span>
-      <span class="link" id="login_link">
-        <%= link_to "Log In"%>
-      </span>
-      <span class="link" id="register_link">
-        <%= link_to "Register"%>
-      </span>
-
-
-
+      <% if current_user == nil %>
+        <span class="link" id="login_link">
+          <%= link_to "Log In"%>
+        </span>
+        <span class="link" id="register_link">
+          <%= link_to "Register"%>
+        </span>
+      <% end %>
+      <% if current_user %>
+        <div id="logged_in_as">
+          <p>Logged-in as: <%= current_user.name %> </p>
+        </div>
+        <div class="link" id="profile_link">
+          <%= link_to "My Profile" %>
+        </div>
+        <div class="link" id="orders_link">
+          <%= link_to "My Orders" %>
+        </div>
+        <div class="link" id="logout_link">
+          <%= link_to "Log Out" %>
+        </div>
+      <% end %>
+      <% if current_merchant? || current_admin? %>
+        <div class="link" id="merchant_dashboard_link">
+          <%= link_to "Merchant Dashboard" %>
+        </div>
+      <% end %>
+      <% if current_admin? %>
+        <div class="link" id="admin_dashboard_link">
+          <%= link_to "Admin Dashboard" %>
+        </div>
+        <div class="link" id="all_users_link">
+          <%= link_to "View All Users" %>
+        </div>
+      <% end %>
     </div>
 
 
