corrected merchant user navbar feature test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <%= link_to "Log Out" %>
         </div>
       <% end %>
-      <% if current_merchant? || current_admin? %>
+      <% if current_merchant?%>
         <div class="link" id="merchant_dashboard_link">
           <%= link_to "Merchant Dashboard" %>
         </div>
