added flash messages for registration success and duplicate email

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,10 @@
         </div>
       <% end %>
     </div>
-
-
+    <% flash.each do |name, value| %>
+      <div> <%= value %> </div>
+    <% end %>
+    <p class="flash"><%= flash.notice %></p>
     <%= yield %>
   </body>
 </html>
