--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,50 +1,30 @@
 <div id="nav_bar">
-  <span class="link" id="welcome_link">
-    <%= link_to "Return to Welcome Page", root_path %>
-  </span>
-  <span class="link" id="browse_items_link">
-    <%= link_to "Browse All Items"%>
-  </span>
-  <span class="link" id="browse_merchants_link">
-    <%= link_to "See Merchants"%>
-  </span>
-  <span class="link" id="view_cart_link">
-    <%= link_to "View Cart"%>
-  </span>
-  <span id="cart_items">Items in Cart: </span>
-  <% if current_user == nil %>
-    <span class="link" id="login_link">
-      <%= link_to "Log In"%>
-    </span>
-    <span class="link" id="register_link">
-      <%= link_to "Register", new_user_path %>
-    </span>
-  <% end %>
+  <% @num_items = 3 %>
+
+  <li><%= link_to "Return to Welcome Page", class: "link", id:"welcome_link" %></li>
+  <li><%= link_to "Browse Items", class: "link", id: "browse_items_link" %></li>
+  <li><%= link_to "See Merchants", class: "link", id: "browse_merchants_link" %></li>
+  <li><%= link_to "View Cart: #{@num_items}", class: "link", id: "view-cart-link" %></li>
+
   <% if current_user %>
-    <div id="logged_in_as">
-      <p>Logged-in as: <%= current_user.name %> </p>
-    </div>
-    <div class="link" id="profile_link">
-      <%= link_to "My Profile" %>
-    </div>
-    <div class="link" id="orders_link">
-      <%= link_to "My Orders" %>
-    </div>
-    <div class="link" id="logout_link">
-      <%= link_to "Log Out" %>
-    </div>
+    <div id="logged_in_as"> Logged-in as: <%= current_user.name %></div>
+    <li><%= link_to "My Profile", class:"link", id: "profile_link" %></li>
+    <li><%= link_to "My Orders", class: "link", id:"orders_link" %></li>
+    <li><%= link_to "Log Out", class:"link", id: "logout_link" %></li>
+  <% else %>
+    <%# show merchant links %>
+    <%# show admin links %>
+    <li><%= link_to "Log In", login_path, class:"link", id: "login_link" %></li>
+    <li><%= link_to "Register", new_user_path, class: "link", id: "register_link" %></li>
   <% end %>
-  <% if current_merchant?%>
-    <div class="link" id="merchant_dashboard_link">
-      <%= link_to "Merchant Dashboard" %>
-    </div>
+
+  <% if current_merchant? %>
+    <%= link_to "Merchant Dashboard", class: "link", id: "merchant_dashboard_link" %>
   <% end %>
+
   <% if current_admin? %>
-    <div class="link" id="admin_dashboard_link">
-      <%= link_to "Admin Dashboard" %>
-    </div>
-    <div class="link" id="all_users_link">
-      <%= link_to "View All Users" %>
-    </div>
+    <%= link_to "Admin Dashboard", class: "link", id: "admin_dashboard_link" %>
+    <%= link_to "View All Users", class: "link", id: "all_users_link" %>
   <% end %>
+
 </div>
