most item index functionality complete

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "Return to Welcome Page", root_path%>
   </span>
   <span class="link" id="browse_items_link">
-    <%= link_to "Browse All Items"%>
+    <%= link_to "Browse All Items", items_path%>
   </span>
   <span class="link" id="browse_merchants_link">
     <%= link_to "See Merchants"%>
@@ -12,15 +12,14 @@
     <%= link_to "View Cart"%>
   </span>
   <span id="cart_items">Items in Cart: </span>
-  <% if current_user == nil %>
-    <span class="link" id="login_link">
+  <% if current_user.nil? %>
+    <span class="link" class="link" id="login-link">
       <%= link_to "Log In"%>
     </span>
     <span class="link" id="register_link">
       <%= link_to "Register", new_user_path %>
     </span>
-  <% end %>
-  <% if current_user %>
+  <% else %>
     <div id="logged_in_as">
       <p>Logged-in as: <%= current_user.name %> </p>
     </div>
@@ -33,18 +32,17 @@
     <div class="link" id="logout_link">
       <%= link_to "Log Out" %>
     </div>
-  <% end %>
-  <% if current_merchant?%>
-    <div class="link" id="merchant_dashboard_link">
-      <%= link_to "Merchant Dashboard" %>
-    </div>
-  <% end %>
-  <% if current_admin? %>
-    <div class="link" id="admin_dashboard_link">
-      <%= link_to "Admin Dashboard" %>
-    </div>
-    <div class="link" id="all_users_link">
-      <%= link_to "View All Users" %>
-    </div>
+    <% if current_merchant?%>
+      <div class="link" id="merchant_dashboard_link">
+        <%= link_to "Merchant Dashboard" %>
+      </div>
+    <% elsif current_admin? %>
+      <div class="link" id="admin_dashboard_link">
+        <%= link_to "Admin Dashboard" %>
+      </div>
+      <div class="link" id="all_users_link">
+        <%= link_to "View All Users" %>
+      </div>
+    <% end %>
   <% end %>
 </div>
