--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,1 +1,6 @@
+<% if current_user %>
+<span id="logged_in_as"> Logged-in as: <%= current_user.name %> </span>
+
+<% end %>
+
 <h1>Welcome to the Little Shop!</h1>
