--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
  <% if current_user %>
    <li><%= link_to "My Profile", "/profile", class:"link", id: "profile_link" %></li>
    <li><%= link_to "My Orders", class: "link", id:"orders_link" %></li>
-   <li><%= link_to "Log Out", logout_path, class:"link", id: "logout_link" %></li>
+   <li> <%= link_to "Log Out", logout_path, method: :delete%></li>
  <% else %>
    <%# show merchant links %>
    <%# show admin links %>
