--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,29 +1,37 @@
 <%= form_for @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.label :address %>
-  <%= f.text_field :address %>
-
-  <%= f.label :city %>
-  <%= f.text_field :city %>
-
-  <%= f.label :state %>
-  <%= f.text_field :state %>
-
-  <%= f.label :zip_code %>
-  <%= f.number_field :zip_code %>
-
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-
+  <div>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
+  </div>
+  <div>
+    <%= f.label :city %>
+    <%= f.text_field :city %>
+  </div>
+  <div>
+    <%= f.label :state %>
+    <%= f.text_field :state %>
+  </div>
+  <div>
+    <%= f.label :zip_code %>
+    <%= f.number_field :zip_code %>
+  </div>
+  <div>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
   <% if current_page?(action: 'new')%>
+    <div>
     <%= f.label :password %>
     <%= f.password_field :password %>
-
-    <%= f.label :password_confirmation %>
+    </div>
+    <div>
+    <%= f.label :confirm_password %>
     <%= f.password_field :password_confirmation %>
-
+    </div>
   <% end %>
   <%= f.submit %>
 <% end %>
