--- a/app/assets/stylesheets/new-user.css
+++ b/app/assets/stylesheets/new-user.css
@@ -1,7 +1,8 @@
 form {
   background: #AAAAAA;
-  margin: 30px;
-  padding: 50px;
+  margin: 50px 10%;
+  padding: 50px 40px;
+  width: 700px;
 }
 
 input[type=text], select {
