--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,15 @@
 <h1> Welcome, <%= user_info = current_user.name %> </h1>
 
 <h2> Your Info: </h2>
-  <ul>
-    <li> Email: <%= current_user.email %> </li>
-    <li> Address: <%= current_user.address %> </li>
-    <li> State: <%= current_user.state %> </li>
-    <li> City: <%= current_user.city %> </li>
-    <li> Zip Code: <%= current_user.zip_code %> </li>
-  </ul>
+<div class="info-box" id="your-info-box">
+    <span id="email-address"> Username: <%= current_user.email %> </span>
+
+    <div>
+      <span> Address: <%= current_user.address %>,&nbsp</span>
+      <span> <%= current_user.city %>,&nbsp </span>
+      <span> <%= current_user.state %>,&nbsp </span>
+      <span> <%= current_user.zip_code %> </span>
+    </div>
+
   <%= link_to 'Edit Info', edit_user_path(current_user) %>
+</div>
