--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -1,11 +1,12 @@
 h2 {
   margin: 0px 20px;
-  font-size: 2em;
-  color: #EFD9CE;
+  font-size: 2em;  color: #EFD9CE;
 }
 
-#your-info-box {
+#your-info-box, #stats-box {
+  margin: 40px;
   padding: 50px;
+  line-height: 1.6;
 }
 
 #email-address {
