add grid and rounded card styling for item index

--- a/app/assets/stylesheets/items.css
+++ b/app/assets/stylesheets/items.css
@@ -1,11 +1,12 @@
 .item-info {
   font-size: 2em;
-  color: #EFD9CE;
+  color: ##38618C;
 }
 
 .item-thumbnail {
+  float: right;
   margin: 20px;
-  height: 100px;
+  height: 150px;
   border-radius: 50%;
   border: solid 5px #BFAE48
 }
@@ -13,9 +14,12 @@
 #items-list {
   margin: 50px;
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .item-entry {
   margin: 10px;
   background: white;
+  border-top-right-radius: 100px;
+  height: 100%;
 }
