--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,16 +1,18 @@
 <h1><u>Items for Sale</u></h1>
 
 <div class="grid-container" id="items-list">
-<!-- TODO: move these divs into individual cards on a grid -->
+
   <% @items.each do |item| %>
   <div class="item-entry", id="item-entry-<%=item.id%>">
+
     <img src="<%= item.img_url %>" class="item-thumbnail" alt="<%= item.name %>-image">
-    <div class="item-info" id="item-name"> <%= item.name %> </div>
-    <div class="item-info" id="item-merchant-name"> <%= item.user.name %> </div>
-    <div class="item-info" id="item-count"> <%= item.inventory_count %> </div>
-    <div class="item-info" id="item-price"> <%= item.price %> </div>
+    <div class="item-info" id="item-name"> <b><%= item.name %></b> </div>
+    <div class="item-info" id="item-merchant-name"> <em><%= item.user.name %> </em> </div>
+    <div class="item-info" id="item-count"> In Stock: <%= item.inventory_count %> </div>
+    <div class="item-info" id="item-price"> $<%= item.price %>  </div>
+    <br>
     <div class="item-info" id="item-description"> <%= item.description %> </div>
+
   </div>
   <% end %>
-
 </div>
