--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @user do |f| %>
   <div class="info-box">
     <%= f.label :full_name %>
-    <%= f.text_field :name, placeholder: "Shelly Marsh" %>
+    <%= f.text_field :name, id: "name-field", placeholder: "Shelly Marsh" %>
   </div>
 
   <div class="info-box">
