--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
     <span> <%= current_user.zip_code %> </span>
   </div>
 
-  <%= link_to 'Edit Info', edit_user_path(current_user) %>
+  <%= link_to 'Edit Info', profile_edit_path %>
 
 </div>
 
