float items in cart line to right of navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="http://example.com/favicon.png">
     <title>LittleShop</title>
     <%= csrf_meta_tags %>
 
