--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,12 +4,13 @@
     <li><%= link_to "Return to Welcome Page", root_path, class: "link", id: "welcome-link" %></li>
     <li><%= link_to "Browse All Items", items_path, class: "link", id: "browse-items-link" %></li>
     <li><%= link_to "See Merchants", class: "link", id: "browse-merchants-link" %></li>
-    <li><%= link_to "View Cart", class: "link", id: "view-cart-link" %> Items in Cart: <%= @num_items %> items</li>
+    <li><%= link_to "View Cart", class: "link", id: "view-cart-link" %></li>
+    <li id="num-items">Items in Cart: <%= @num_items %></li>
   <% if current_user.nil? %>
       <li><%= link_to "Log In", login_path, class: "link", id: "login-link" %></li>
       <li><%= link_to "Register", new_user_path, class: "link", id: "register-link" %></li>
   <% else %>
-    <div id="logged_in_as">
+    <div id="logged-in-as">
       <p>Logged-in as: <%= current_user.name %> </p>
     </div>
 
