--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,6 +5,7 @@
   <% @items.each do |item| %>
   <div class="item-entry", id="item-entry-<%=item.id%>">
 
+    <%= link_to "VIEW", item_path(item), class: "item-info", id: "view-link" %>
     <img src="<%= item.img_url %>" class="item-thumbnail" alt="<%= item.name %>-image">
     <div class="item-info" id="item-name"> <b><%= item.name %></b> </div>
     <div class="item-info" id="item-merchant-name"> <em><%= item.user.name %> </em> </div>
