create item show page test

--- a/app/assets/stylesheets/item.css
+++ b/app/assets/stylesheets/item.css
@@ -4,11 +4,34 @@
   color: #EFD9CE;
 }
 
+#seller-info, #inventory-info, #price-tag {
+  margin: 0px 20px;
+  font-size: 2em;
+  color: #EFD9CE;
+}
+
+#seller-name {
+  text-decoration: none;
+}
+
+#add-link-wrapper {
+  margin: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  background: darkgreen;
+  width: 180px;
+}
+
 #add-link {
-  margin-left: 30px;
+  /* padding: 10px; */
   text-decoration: none;
   font-size: 2em;
-  color: red;
+  color: #EFD9CE;
+}
+
+
+#add-link-wrapper:hover {
+  background: green;
 }
 
 .item-big-image {
