reposition logged-in under navbar

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -7,11 +7,15 @@ ul {
   flex: wrap;
 }
 
-li {
+li, #logged-in-as {
   font-size: 2em;
   flex: 1;
   float: left;
   color: white;
+}
+
+#logged-in-as {
+float: right;
 }
 
 li a {
