--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,11 @@
+<h1>Leaderboard</h1>
+<div class="item-entry" id="stats-block">
+  <div class="item-info">Best Selling Merchants</div>
+  <div class="item-info">Best Selling Items</div>
+  <div class="item-info">Fastest Fulfillers</div>
+  <div class="item-info">Slowest Shippers</div>
+</div>
+
 <h1><u>Items for Sale</u></h1>
 
 <div class="grid-container" id="items-list">
