--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,15 @@
-<h1> Welcome, <%= current_user.name %> </h1>
+<% if current_user %>
+  <h1> Welcome, <%= current_user.name %> </h1>
 
-<h2> Your Info: </h2>
-  <ul>
-    <li> Email: <%= current_user.email %> </li>
-    <li> Address: <%= current_user.address %> </li>
-    <li> State: <%= current_user.state %> </li>
-    <li> City: <%= current_user.city %> </li>
-    <li> Zip Code: <%= current_user.zip_code %> </li>
-  </ul>
-  <%= link_to 'Edit Info', profile_edit_path %>
+  <h2> Your Info: </h2>
+    <ul>
+      <li> Email: <%= current_user.email %> </li>
+      <li> Address: <%= current_user.address %> </li>
+      <li> State: <%= current_user.state %> </li>
+      <li> City: <%= current_user.city %> </li>
+      <li> Zip Code: <%= current_user.zip_code %> </li>
+    </ul>
+    <%= link_to 'Edit Info', profile_edit_path %>
+<% else %>
+  not_found
+<% end %>
