fix grid spacing'

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,6 +18,7 @@
     <div class="item-info" id="item-name"> <b><%= item.name %></b> </div>
     <div class="item-info" id="item-merchant-name"> <em><%= item.user.name %> </em> </div>
     <div class="item-info" id="item-count"> In Stock: <%= item.inventory_count %> </div>
+    <!--TODO: convert to currency -->
     <div class="item-info" id="item-price"> $<%= item.price %>  </div>
     <br>
     <div class="item-info" id="item-description"> <%= item.description %> </div>
