--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,13 @@
   </head>
 
   <body>
-
     <%= render partial: 'layouts/navbar'  %>
 
 
     <% flash.each do |name, value| %>
       <div class="flash"> <%= value %> </div>
     <% end %>
+    <%# binding.pry %>
 
     <%= yield %>
   </body>
