WIP: getting the user's cart to persist, (currently displaying on page)

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div id="add-link-wrapper">
-  <%= link_to "ADD TO CART", cart_path(@item, item_id: @item.id), id: "add-link" %>
+  <%= link_to "ADD TO CART", carts_path(@item, item_id: @item.id), method: :post, id: "add-link" %>
 </div>
 
 <img src="<%= @item.img_url %>" class="item-big-image" alt="<%= @item.name %>-image">
