--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <div class="flash"> <%= value %> </div>
     <% end %>
     <%# binding.pry %>
+    <div class="flash"><%= session[:cart] %></div>
 
     <%= yield %>
   </body>
