--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,7 @@
 <h1> <%= @user.name %> </h1>
 <ul>
   <li> <%= @user.role %> </li>
+  <li>Status: <%= @user.status %> </li>
   <li>Email: <%= @user.email %> </li>
   <li>Address: <%= @user.address %> </li>
   <li>City: <%= @user.city %> </li>
