--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,7 +1,16 @@
-<h1>Your Shopping Cart</h1>
+<h1 class="page-title">Your Shopping Cart</h1>
 <div class="cart">
-  <% @items.each do |item| %>
-  <img src="<%= item.img_url %>" class="item-big-image" alt="<%= item.name %>-image">
-  <%= item.name %>
+  <% if @items.nil? %>
+  You have no items in your cart
+  <% elsif @items %>
+    <ul>
+      <% @items.each do |item| %>
+        <div class="item-list">
+          <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
+          <%= item.name %>
+          <%= number_to_currency(item.price) %>
+        </div>
+      <% end %>
+    </ul>
   <% end %>
 </div>
