--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,14 +1,14 @@
-<h1 class="page-title">Your Shopping Cart</h1>
+<h1 class="page-title"><u>Your Shopping Cart</u></h1>
 <div class="cart">
   <% if @items.nil? %>
   You have no items in your cart
   <% elsif @items %>
-    <ul>
+    <ul id="all-items-box">
       <% @items.each do |item| %>
         <div class="item-list">
           <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
           <%= item.name %>
-          <%= number_to_currency(item.price) %>
+          <span class="price"><%= number_to_currency(item.price) %></span>
         </div>
       <% end %>
     </ul>
