--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div id="price-tag">
-  $<%= @item.price %>
+  <%= number_to_currency(@item.price) %>
 </div>
 
 <div id="add-link-wrapper">
