--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,16 +1,22 @@
 <h1 class="page-title"><u>Your Shopping Cart</u></h1>
 <div class="cart">
-  <% if @items.nil? %>
+
+  <% if @cart.items.nil? %>
   You have no items in your cart
-  <% elsif @items %>
+
+  <% elsif @cart.items %>
+
     <ul id="all-items-box">
-      <% @items.each do |item| %>
+      <% @cart.items.each do |item| %>
+
         <div class="item-list">
           <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
           <%= item.name %>
           <span class="price"><%= number_to_currency(item.price) %></span>
         </div>
+
       <% end %>
     </ul>
+
   <% end %>
 </div>
