--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,7 +1,7 @@
 <h1 class="page-title"><u>Your Shopping Cart</u></h1>
 <div class="cart">
 
-  <% if @cart.items.nil? %>
+  <% if @cart.count_all == 0 %>
   You have no items in your cart
 
   <% elsif @cart.items %>
@@ -10,6 +10,7 @@
       <% @cart.items.each do |item| %>
 
         <div class="item-list">
+          <%= @cart.quantity(item.id) %>
           <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
           <%= item.name %>
           <span class="price"><%= number_to_currency(item.price) %></span>
