fixes bug in total price, update flash message to be more accurate

--- a/app/assets/stylesheets/items.css
+++ b/app/assets/stylesheets/items.css
@@ -44,4 +44,9 @@
   background: white;
   border-top-right-radius: 100px;
   height: 100%;
+  border-left: 6px solid red;
+}
+
+.item-entry:hover {
+  border-left: 12px solid green;
 }
