--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -13,7 +13,9 @@
           <%= @cart.quantity(item.id) %>
           <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
           <%= item.name %>
-          <span class="price"><%= number_to_currency(item.price) %></span>
+          <span class="price">
+            <%= number_to_currency(item.price * @cart.quantity(item.id)) %>
+          </span>
         </div>
 
       <% end %>
