--- a/app/assets/stylesheets/items.css
+++ b/app/assets/stylesheets/items.css
@@ -1,9 +1,19 @@
+#leaderboard-title {
+  margin: 40px 20px 0px 20px;
+}
+
+#stats-block {
+  background: white;
+  margin: 10px 20px 20px 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .item-info {
   font-size: 2em;
   color: #38618C;
-  margin: 20px;
+  margin: 10px;
 }
-
 
 .item-thumbnail {
   float: right;
@@ -33,12 +43,6 @@
   grid-row-gap: 20px;
 }
 
-#stats-block {
-  background: white;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
 .item-entry {
   margin: 10px;
   background: white;
@@ -48,5 +52,5 @@
 }
 
 .item-entry:hover {
-  border-left: 12px solid green;
+  border-left: 7px solid green;
 }
