--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Leaderboard</h1>
-<div class="item-entry" id="stats-block">
+<h2 id="leaderboard-title">Leaderboard</h2>
+<div id="stats-block">
   <div class="item-info">Best Selling Merchants</div>
   <div class="item-info">Best Selling Items</div>
   <div class="item-info">Fastest Fulfillers</div>
