admin can now visit the merchants index and enable/disable a specific merchant

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -10,3 +10,5 @@
   <li>Created On: <%= @user.created_at %> </li>
   <li>Last Updated: <%= @user.updated_at %> </li>
 </ul>
+
+<%= link_to 'Edit Info', edit_user_path(@user) %> 
