--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -1,6 +1,7 @@
 h2 {
   margin: 0px 20px;
-  font-size: 2em;  color: #EFD9CE;
+  font-size: 2em;
+  color: #EFD9CE;
 }
 
 #your-info-box, #stats-box {
