--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,14 +1,49 @@
-<h1> <%= @user.name %> </h1>
-<ul>
-  <li> <%= @user.role %> </li>
-  <li>Status: <%= @user.status %> </li>
-  <li>Email: <%= @user.email %> </li>
-  <li>Address: <%= @user.address %> </li>
-  <li>City: <%= @user.city %> </li>
-  <li>State: <%= @user.state %> </li>
-  <li>Zip Code: <%= @user.zip_code %> </li>
-  <li>Created On: <%= @user.created_at %> </li>
-  <li>Last Updated: <%= @user.updated_at %> </li>
-</ul>
+<h1> User Information </h1>
 
-<%= link_to 'Edit Info', edit_user_path(@user) %> 
+<table id="user-info">
+
+  <tr>
+    <th></th>
+    <th><%= @user.name %> Info</th>
+  </tr>
+
+  <tr>
+    <td>Role</td>
+    <td><%= @user.role %></td>
+  </tr>
+
+  <tr>
+    <td>Status</td>
+    <td><%= @user.status %></td>
+  </tr>
+
+  <tr>
+    <td>Email</td>
+    <td><%= @user.email %></td>
+  </tr>
+
+  <tr>
+    <td>Address</td>
+    <td><%= @user.address %></td>
+  </tr
+
+  <tr>
+    <td>City</td>
+    <td><%= @user.city %>, <%= @user.state %>, <%= @user.zip_code %> </td>
+  </tr>
+
+  <tr>
+    <td>Created</td>
+    <td><%= @user.created_at %></td>
+  </tr>
+
+  <tr>
+    <td>Updated</td>
+    <td><%= @user.updated_at %></td>
+  </tr>
+
+  <tr>
+    <td></td>
+    <td><%= link_to 'Edit Info', edit_user_path(@user), id: "edit-info-link" %></td>
+  </tr>
+</table>
