--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
     <li><%= link_to "Return to Welcome Page", root_path, class: "link", id: "welcome-link" %></li>
     <li><%= link_to "Browse All Items", items_path, class: "link", id: "browse-items-link" %></li>
 
-    <li><%= link_to "See Merchants", class: "link", id: "browse-merchants-link" %></li>
+    <li><%= link_to "See Merchants", merchants_path, class: "link", id: "browse-merchants-link" %></li>
     <li><%= link_to "View Cart", carts_path, class: "link", id: "view-cart-link" %></li>
 
     <li id="num-items">Cart:(<%= @cart.count_all %> items)</li>
@@ -25,7 +25,7 @@
       <li><%= link_to "Merchant Dashboard", class: "link", id:"merchant-dashboard-link" %></li>
     <% elsif current_admin? %>
       <li><%= link_to "Admin Dashboard", class: "link", id: "admin-dashboard-link" %></li>
-      <li><%= link_to "View All Users", class: "link", id: "all-users-link" %></li>
+      <li><%= link_to "View All Users", admin_users_path, class: "link", id: "all-users-link" %></li>
     </div>
     <% end %>
 
