fix tests broken in html refactor

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,8 @@
 <h2> Your Info:</h2>
 
 <div class="info-box" id="your-info-box">
-  <span id="email-address"> Username: <%= current_user.email %> </span>
+  <div> Role: <%= current_user.role %></div>
+  <div id="email-address"> Username: <%= current_user.email %> </div>
   <div>
     <span> Address: <%= current_user.address %>,&nbsp</span>
     <span> <%= current_user.city %>,&nbsp </span>
