--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
   <div class="item-info">Slowest Shippers</div>
 </div>
 
-<h1><u>Items for Sale</u></h1>
+<h1>Items for Sale</h1>
 
 <div class="grid-container" id="items-list">
 
