--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
-<div id="item-head">
+<h1 id="item-head">
   <%= @item.name %>
-</div>
+</h1>
 
 <div id="seller-info">
   Brought to you by <%= link_to "#{@seller.name.upcase}", "#", id: "seller-name" %>
