--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
     <li><%= link_to "My Profile", profile_path, class: "link", id: "profile-link" %></li>
 
     <% if current_user.orders.count > 0 %>
-        <li><%= link_to "My Orders", orders_path, class: "link", id: "orders-link" %></li>
+        <li><%= link_to "My Orders", profile_orders_path, class: "link", id: "orders-link" %></li>
     <% end %>
 
     <li><%= link_to "Log Out", logout_path, method: :delete, class: "link", id: "logout-link" %></li>
