--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,7 +2,7 @@
 <div class="cart">
 
   <% if @cart.count_all == 0 %>
-  You have no items in your cart
+  <div>You have no items in your cart</div>
 
   <% elsif @cart.items %>
 
@@ -10,7 +10,11 @@
       <% @cart.items.each do |item| %>
 
         <div class="item-list">
+          <%= link_to "-", carts_path(item, item_id: item.id), method: :post, class: "increment-link", id: "drop-one" %>
+
+          <%= link_to "+", carts_path(item, item_id: item.id), method: :post, class: "increment-link", id: "add-one" %>
           <%= @cart.quantity(item.id) %>
+
           <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
           <%= item.name %>
           <em><%= @cart.merchant(item.id).name %></em>
