--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,10 +1,10 @@
-<h1> All Merchants </h1>
+<h1 id="all-merchants-header"> All Merchants </h1>
 
 <% @merchants.each do |merchant| %>
   <% if current_admin? %>
     <%=link_to merchant.name, admin_user_path(merchant), class: "merchant-link", id: "merchant-name"%>
   <% else %>
-    <%= merchant.name %>
+    <span id="merchant-name"><%= link_to merchant.name, merchant_path(merchant) %></span>
   <% end %>
 
   <% if merchant.status == 'active' && current_admin?%>
