--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,6 +7,8 @@
     <th>update</th>
   </tr>
 
+  <!-- TODO: Refactor the enable disable link to a toggle -->
+
   <% @users.each do |user| %>
 
     <tr>
