css errors will BREAK half your tests. easy to fix

--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -12,7 +12,7 @@
   position: relative;
   top: 110px;
   left: 642px;
-  filter: opacity(.9)
+  filter: opacity(.9);
   overflow-wrap: normal;
 }
 
