--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -9,7 +9,7 @@
     <ul id="all-items-box">
       <% @cart.items.each do |item| %>
 
-        <div class="item-list">
+        <div class="item-list" id="item-list<%= item.id %>">
           <%= link_to "-", carts_path(item, item_id: item.id), method: :put, class: "increment-link", id: "drop-one" %>
           <%= link_to "+", carts_path(item, item_id: item.id), method: :post, class: "increment-link", id: "add-one" %>
           <%= @cart.quantity(item.id) %>
