--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -10,8 +10,8 @@
       <% @cart.items.each do |item| %>
 
         <div class="item-list" id="item-list<%= item.id %>">
-          <%= link_to "-", carts_path(item_id: item.id, thing: "decrease"), method: :put, class: "increment-link", id: "drop-one" %>
-          <%= link_to "+", carts_path(item_id: item.id, thing: "increase"), method: :post, class: "increment-link", id: "add-one" %>
+          <%= link_to "-", cart_path(item_id: item.id, thing: "decrease"), method: :put, class: "increment-link", id: "drop-one" %>
+          <%= link_to "+", cart_path(item_id: item.id, thing: "increase"), method: :put, class: "increment-link", id: "add-one" %>
           <%= @cart.quantity(item.id) %>
 
           <img src="<%= item.img_url %>" class="item-cart-image" alt="<%= item.name %>-image">
@@ -28,6 +28,20 @@
 
   <% end %>
 
-  <div id="cart-total">Total: <%= number_to_currency(@cart.total_price) %> </div>
-  <%= link_to "Empty Cart", carts_path, method: :delete, id: "empty-cart-link" %>
+  <div id="login-or-register">
+    <span id="cart-total">Total: <%= number_to_currency(@cart.total_price) %> </span>
+
+    <%= link_to "Empty Cart", cart_path, method: :delete, class: "cart-link", id: "empty-cart-link" %>
+
+    <% unless current_user %>
+      You must
+      <%= link_to "Register", new_user_path %> or
+      <%= link_to "Login", login_path %>
+      to checkout
+    <% end %>
+
+    <% if current_user %>
+    <%= link_to "Checkout", user_orders_path(current_user), method: :post, class: "cart-link", id: "checkout-link" %>
+    <% end %>
+  </div>
 </div>
