--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
     <li><%= link_to "Browse All Items", items_path, class: "link", id: "browse-items-link" %></li>
 
     <li><%= link_to "See Merchants", merchants_path, class: "link", id: "browse-merchants-link" %></li>
-    <li><%= link_to "View Cart", carts_path, class: "link", id: "view-cart-link" %></li>
+    <li><%= link_to "View Cart", cart_path, class: "link", id: "view-cart-link" %></li>
 
     <li id="num-items">Cart:(<%= @cart.count_all %> items)</li>
   <% if current_user.nil? %>
