admin can now visit the merchants dashboard with correct uri. Implemented partials to recreate dashboard for both admin and merchant

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,2 +1,2 @@
-<h1> <%= @merchant.name %> Dashboard </h1>
-  <h3> <%= link_to 'Orders With Your Items', dashboard_orders_path(@merchant)%> </h3> 
+<h1> <%= current_user.name %> Dashboard </h1>
+  <%= render partial: 'merchant_dashboard'  %>
