admin can now upgrade and downgrade a users to and from merchant. redirect issue with admin editing of users was fixed

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,1 +1,2 @@
 <%= render partial: 'dashboard/merchant_dashboard'  %>
+<%= link_to "Downgrade To Registered User", admin_user_path(@merchant, role: 'registered_user'), method: :put %>
