--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -46,9 +46,11 @@
     <td></td>
     <td><%= link_to 'View User Orders', admin_user_orders_path(@user), id: "users-orders-link" %></td>
   </tr>
-  
+
   <tr>
     <td></td>
     <td><%= link_to 'Edit Info', edit_user_path(@user), id: "edit-info-link" %></td>
   </tr>
 </table>
+
+  <%= link_to "Upgrade To Merchant", admin_user_path(@user, role: 'merchant_user'), method: :put%> 
