--- a/app/assets/stylesheets/orders.css
+++ b/app/assets/stylesheets/orders.css
@@ -2,23 +2,49 @@
   font-size: 1em;
 }
 
-.order-info > td {
-  border-bottom: 2px solid grey;
-  margin: 0;
-  padding: 0;
-}
 
 table {
   padding: 20px;
   width: 100%;
   line-height: 30px;
   background: white;
-  text-align: center;
+  text-align: left;
 }
 
+.order-info > td {
+  border-bottom: 2px solid grey;
+  margin: 0;
+  padding: 0;
+}
 
 th {
   font-size: 2em;
   margin-top: 50px;
   text-decoration: underline;
+}
+
+.order-id {
+  float: left;
+  font-size: 2em;
+}
+
+.order-details {
+  background: red;
+  /* border: 5px solid red; */
+}
+
+.order-description {
+  text-align: center;
+}
+
+#remove-item-link {
+  float: left;
+  background: darkred;
+  color: white;
+  text-decoration: none;
+}
+
+#remove-item-link:hover {
+  background: red;
+  color: white;
 }
