--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
 <h1> Your Orders </h1>
 
-<table>
+<table id="container">
   <tr id="headers">
     <th>Order</th>
     <th>Qnty</th>
@@ -20,7 +20,7 @@
         <tr class="order-details">
           <td></td>
           <td><%= order_item.item_quantity %></td>
-          <td><%= order_item.item.name %></td>
+          <td class="order-name"><%= order_item.item.name %></td>
           <td><%= number_to_currency(order_item.item_price) %></td>
           <td class="order-description"><em><%= order_item.item.description %></em></td>
           <td><%= order.created_at.strftime('%D') %></td>
