--- a/app/assets/stylesheets/merchants.css
+++ b/app/assets/stylesheets/merchants.css
@@ -1,7 +1,7 @@
 .merchant-link{
   margin: 0px 20px;
   font-size: 2em;
-  color: #EFD9CE;
+  color: black;
 }
 
 #merchant-name {
@@ -10,7 +10,8 @@
 }
 
 #merchant-name:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
+  color: blue;
 }
 
 
@@ -24,9 +25,17 @@
 }
 
 #disable-link {
+  background: darkred;
+  color: white;
+}
+#disable-link:hover {
   background: red;
 }
 
 #enable-link {
+  background: darkgreen;
+  color: white;
+}
+#enable-link:hover {
   background: green;
 }
